# Copyright © 2018–2019 Trevor Spiteri

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "fixed"
version = "0.4.1"
authors = ["Trevor Spiteri <tspiteri@ieee.org>"]
description = "Fixed-point numbers"
documentation = "https://docs.rs/fixed"
repository = "https://gitlab.com/tspiteri/fixed"
readme = "README.md"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "no-std", "science"]
license = "MIT/Apache-2.0"
edition = "2018"
autobenches = false

[features]
f16 = ["half"]
fail-on-warnings = []

[dependencies]
typenum = "1.8"
half = { version = "1.2", optional = true }
serde = { version = "1.0.25", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.6", default-features = false }
rand_xoshiro = "0.2"
criterion = "0.2"
num-traits = { version = "0.2", default-features = false }

[package.metadata.docs.rs]
features = ["f16", "serde"]

[[bench]]
name = "bench_main"
harness = false
