# Copyright © 2018–2019 Trevor Spiteri

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "fixed"
version = "0.4.6"
authors = ["Trevor Spiteri <tspiteri@ieee.org>"]
description = "Fixed-point numbers"
documentation = "https://docs.rs/fixed"
repository = "https://gitlab.com/tspiteri/fixed"
readme = "README.md"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "no-std", "science"]
license = "MIT/Apache-2.0"
edition = "2018"
autobenches = false

[features]
f16 = ["half"]
fail-on-warnings = []

[dependencies]
typenum = "1.10"
az = { version = "0.3", optional = true }
half = { version = "1.4", optional = true }
serde = { version = "1.0.60", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.6", default-features = false }
rand_xoshiro = "0.2"
criterion = "0.2"
num-traits = { version = "0.2", default-features = false }

[package.metadata.docs.rs]
features = ["az", "f16", "serde"]

[[bench]]
name = "bench_main"
harness = false
